@startuml

title __EMPLOYEEVIEW's Class Diagram__\n

  package gui {
    package gui.employeeview {
      class AddressController {
          ~ country : HBox
          ~ region : HBox
          ~ city : HBox
          ~ street : HBox
          ~ streetNumber : HBox
          ~ homeNumber : HBox
          ~ postalCode : HBox
          + setMode()
          + applyValues()
          + changeRegion()
          + changeCity()
          + changeStreet()
          + changeStreetNumber()
          + changeHomeNumber()
          + changePostalCode()
          + changeCountryTOPOLAND()
          + getAddress()
          + setAddress()
      }
    }
  }
  

  package gui {
    package gui.employeeview {
      class EmployeeController {
          ~ id : Text
          + setMode()
          + setEmployee()
          + save()
          + cancel()
      }
    }
  }
  

  package gui {
    package gui.employeeview {
      enum EmployeeViewGenerator {
        VIEW_MODE
        CREATE_MODE
        EDIT_MODE
      }
    }
  }
  

  package gui {
    package gui.employeeview {
      class JobController {
          ~ jobTitle : HBox
          ~ paymentStrategy : HBox
          ~ payment : HBox
          ~ paymentType : HBox
          - jobTitleValue : String
          - paymentStrategyValue : String
          - paymentCurrencyValue : String
          - paymentValue : double
          + initialize()
          + setMode()
          + applyValues()
          + changePaymentStrategy()
          + changePayment()
          + changePaymentType()
          + changeJobTitle()
          + getJobTitleValue()
          + getPaymentStrategyValue()
          + getPaymentCurrencyValue()
          + getPaymentValue()
          + getPaymentTypeValue()
          + setJobTitleValue()
          + setPaymentStrategyValue()
          + setPaymentCurrencyValue()
          + setPaymentValue()
          + setPaymentTypeValue()
      }
    }
  }
  

  package gui {
    package gui.employeeview {
      class PersonalController {
          ~ personIDType : HBox
          ~ personID : HBox
          ~ firstname : HBox
          ~ surname : HBox
          ~ personSex : HBox
          ~ birthdate : HBox
          ~ id : String
          + setMode()
          + applyValues()
          + changeFirstname()
          + changeSurname()
          + changePersonIDType()
          + changePersonID()
          + changeSex()
          + changeMale()
          + changeFemale()
          + changeBirthdate()
          + getPerson()
          + getIdType()
          + getId()
          + setPerson()
      }
    }
  }
  

  AddressController o-- Address : address
  EmployeeController o-- PersonalController : personalController
  EmployeeController o-- AddressController : addressController
  EmployeeController o-- JobController : jobController
  EmployeeViewGenerator -up-|> ContentGenerator
  JobController o-- SimpleLocatorEntries : paymentTypeValue
  PersonalController o-- Person : person
  PersonalController o-- IDType : idType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
